--- a/public/templates/recipe-detail.html
+++ b/public/templates/recipe-detail.html
@@ -1,31 +1,22 @@
 <div class="grid-100 row controls">
   <div class="grid-50">
-    <!-- TODO Add a binding expression to display the recipe name 
-      when editing a recipe. When adding a recipe, display the 
-      static text 'Add New Recipe'. -->
-    <h2>Add/Edit Recipe</h2>
+    <h2>{{recipe.name}}</h2>
+    <h2 ng-show="isNew()">Add/Edit Recipe</h2>
   </div>
   <div class="grid-50">
     <div class="flush-right">
-      <!-- TODO Add directives to both the "Save Recipe" and "Cancel"
-        buttons in order to handle user clicks. -->
-      <button>Save Recipe</button>
-      <button class="secondary">Cancel</button>
+      <button ng-click="saveRecipe(recipe)">Save Recipe</button>
+      <button ng-click="return()" class="secondary">Cancel</button>
     </div>
   </div>
 </div>
 <div class="clear"></div>
-
-<!-- TODO Add a directive to this div element so that it only displays
-  when there are validation messages to display. -->
-<div class="grid-100 row">
+<div ng-show="errors" class="grid-100 row">
   <div class="grid-100">
     <p><i>The following errors were found:</i></p>
     <ul class="validation-errors">
-      <!-- TODO Add a directive to this li element so that it repeats
-        for each validation message that there is to display -->
-      <li>
-        <!-- TODO Add a binding expression to display the validation user message. -->
+      <li ng-repeat="error in errors">
+        {{error.message}}
       </li>
     </ul>
   </div>
@@ -40,9 +31,7 @@
   </div>
   <div class="grid-40">
     <p>
-      <!-- TODO Add a directive to this input element to bind its value 
-        to the recipe model's `name` property. -->
-      <input type="text">
+      <input ng-model="recipe.name" type="text">
     </p>
   </div>
 </div>
@@ -56,9 +45,7 @@
   </div>
   <div class="grid-60">
     <p>
-      <!-- TODO Add a directive to this textarea element to bind its content 
-        to the recipe model's `description` property. -->
-      <textarea></textarea>
+      <textarea ng-model="recipe.description"></textarea>
     </p>
   </div>
 </div>
@@ -72,11 +59,8 @@
   </div>
   <div class="grid-30">
     <p>
-      <!-- TODO Add directives to this select element to bind its value 
-        to the recipe model's `category` property and to populate the list
-        with the categories from the database. -->
-      <select>
-        <option value="">All Categories</option>
+      <select ng-model="recipe.category">
+        <option ng-repeat="category in categories" value={{category.name}}>{{category.name}}</option>
       </select>
     </p>
   </div>
@@ -91,9 +75,7 @@
   </div>
   <div class="grid-20">
     <p>
-      <!-- TODO Add a directive to this input element to bind its value 
-        to the recipe model's `prepTime` property. -->
-      <input type="number">
+      <input ng-model="recipe.prepTime" type="number">
     </p>
   </div>
 </div>
@@ -107,9 +89,7 @@
   </div>
   <div class="grid-20">
     <p>
-      <!-- TODO Add a directive to this input element to bind its value 
-        to the recipe model's `cookTime` property. -->
-      <input type="number">
+      <input ng-model="recipe.cookTime" type="number">
     </p>
   </div>
 </div>
@@ -137,47 +117,34 @@
     </p>
   </div>
 
-  <!-- TODO Add a directive to this div element so that it repeats 
-    for each recipe ingredient to display. -->
-  <div class="ingredient-row">
+  <div ng-repeat="ingredient in recipe.ingredients" class="ingredient-row">
     <div class="prefix-20 grid-30">
       <p>
-        <!-- TODO Add directives to this select element to bind its value 
-          to the recipe ingredient model's `foodItem` property and to 
-          populate the list with the food items from the database. -->
-        <select>
-          <option value="">Select Item</option>
+        <select ng-model="recipe.ingredients[$index].foodItem">
+          <option ng-repeat="item in foodItems" value={{item.name}}>{{item.name}}</option>
         </select>
       </p>
     </div>
     <div class="grid-30">
       <p>
-        <!-- TODO Add a directive to this input element to bind its value 
-          to the recipe ingredient model's `condition` property. -->
-        <input type="text">
+        <input ng-model="recipe.ingredients[$index].condition" type="text">
       </p>
     </div>
     <div class="grid-15">
       <p>
-        <!-- TODO Add a directive to this input element to bind its value 
-          to the recipe ingredient model's `amount` property. -->
-        <input type="text">
+        <input ng-model="recipe.ingredients[$index].amount" type="text">
       </p>
     </div>
     <div class="grid-5 pad-top">
       <p class="flush-right">
-        <!-- TODO Add a directive to this anchor element so that you can 
-          delete the recipe ingredient when the user clicks on the 'Delete' link. -->
-        <a class="no-action-link"> <img src="images/delete.svg" height="12px"> </a>
+        <a ng-click="deleteIngredient($index)" class="no-action-link"> <img src="images/delete.svg" height="12px"> </a>
       </p>
     </div>
   </div>
 
   <div class="prefix-20 grid-80 add-row">
     <p>
-      <!-- TODO Add a directive to this button in order to handle 
-        when the user clicks to add a new recipe ingredient. -->
-      <button>+ Add Another Ingredient</button>
+      <button ng-click="addIngredient()">+ Add Another Ingredient</button>
     </p>
   </div>
 
@@ -196,30 +163,23 @@
     </p>
   </div>
 
-  <!-- TODO Add a directive to this div element so that it repeats 
-    for each recipe step to display. -->
-  <div class="step-row">
+  <div ng-repeat="step in recipe.steps" class="step-row">
     <div class="prefix-20 grid-75">
       <p>
-        <!-- TODO Add a directive to this input element to bind its value 
-          to the recipe step model's `description` property. -->
-        <input type="text">
+        {{$index+1}}.
+        <input ng-model="step.description" type="text">
       </p>
     </div>
     <div class="grid-5 pad-top">
       <p class="flush-right">
-        <!-- TODO Add a directive to this anchor element so that you can 
-          delete the recipe step when the user clicks on the 'Delete' link. -->
-        <a class="no-action-link"> <img src="images/delete.svg" height="12px"> </a>
+        <a ng-click="deleteStep($index)" class="no-action-link"> <img src="images/delete.svg" height="12px"> </a>
       </p>
     </div>
   </div>
 
   <div class="prefix-20 grid-80 add-row">
     <p>
-     <!-- TODO Add a directive to this button in order to handle 
-       when the user clicks to add a new recipe step. -->
-     <button>+ Add Another Step</button>
+     <button ng-click="addStep()">+ Add Another Step</button>
     </p>
   </div>
 
